syntax = "proto3";
option go_package = "github.com/eugenshima/trading-api";

message Shares {
    string shareName = 1;
    double sharePrice = 2;
}

service PriceService {
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}

message SubscribeRequest {
    repeated string shareName = 1;
}

message SubscribeResponse {
    repeated Shares shares = 1;
    string ID = 2;
}